--- a/style.css
+++ b/style.css
@@ -244,9 +244,13 @@ section p {
     margin-bottom: 50px;
 }
 
+.next-target .container {
+    position: relative;
+    left: 0px;
+}
+
 .next-target .container .boxs .item {
     display: flex;
-    width: 100%;
     margin: 0 auto;
     border: 1px solid black;
     padding: 40px;
@@ -277,4 +281,77 @@ section p {
     color: black;
     font-size: 15px;
     font-weight: 700;
+}
+
+
+/* Support Section Style */
+
+.support-section {
+    margin: 60px 0;
+}
+
+.support-section .container {
+    background-image: url(assets/handshake.jpg);
+    width: 100%;
+    height: 300px;
+    padding-top: 50px;
+    align-content: center;
+    border-radius: 15px;
+    padding: 80px;
+}
+
+.support-section .container p {
+    color: white;
+    font-size: 20px;
+}
+
+.support-section .container .form {
+    margin-top: 30px;
+}
+
+.support-section .container .form input {
+    margin-left: 17%;
+    padding: 20px 400px 20px 20px;
+    font-size: 15px;
+    border: none;
+    border-radius: 10px;
+}
+
+.support-section .container .form button {
+    padding: 17px 30px;
+    font-size: 20px;
+    font-weight: 700;
+    margin-top: 10px;
+    background-color: greenyellow;
+    border: none;
+    border-radius: 10px;
+}
+
+/* Footer Section Style */
+
+.footer-section {
+    background-color: #d5c7c7;
+    padding: 30px 0;
+}
+
+.footer-section .container .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+}
+
+.footer-section .container .footer-content .text {
+    align-content: center;
+}
+
+.footer-section .container .footer-content .text h5 {
+    font-size: 15px;
+}
+
+.footer-section .container .footer-content .icons a {
+    padding-right: 15px;
+}
+
+.footer-section .container .footer-content .icons a:last-child {
+    padding-right: 0;
 }
